基础功能全部晚上1.2

--- a/themes/next/_config.yml
+++ b/themes/next/_config.yml
@@ -92,11 +92,16 @@ index_with_subtitle: false
 # Value before `||` delimeter is the target link.
 # Value after `||` delimeter is the name of FontAwesome icon. If icon (with or without delimeter) is not specified, question icon will be loaded.
 menu:
-  home: / || home
+  home: /|| home
+  archives: /archives/|| archive          //归档
+  categories: /categories/|| th           //分类
+  tags: /tags/|| tags                     //标签
+  about: /about/|| user                   //关于
+  游戏: /games/|| gamepad                  //游戏
   #about: /about/ || user
   #tags: /tags/ || tags
   #categories: /categories/ || th
-  archives: /archives/ || archive
+  # archives: /archives/|| archive
   #schedule: /schedule/ || calendar
   #sitemap: /sitemap.xml || sitemap
   #commonweal: /404/ || heartbeat
@@ -227,7 +232,7 @@ excerpt_description: true
 # Automatically Excerpt. Not recommend.
 # Please use <!-- more --> in the post to control excerpt accurately.
 auto_excerpt:
-  enable: false
+  enable: true
   length: 150
 
 # Post meta display settings
