--- a/_config.yml
+++ b/_config.yml
@@ -3,7 +3,7 @@
 ## Source: https://github.com/hexojs/hexo/
 
 # Site
-title: 随风而醒
+title: 随风而行
 subtitle: 'soundslow'
 description: 'I take the newer medications, but I still see things that are not here.'
 keywords:
@@ -24,7 +24,7 @@ menu:
 
 # URL
 ## If your site is put in a subdirectory, set url as 'http://yoursite.com/child' and root as '/child/'
-url: http://yoursite.com
+url: https://purice93.github.io/
 root: /
 permalink: :year/:month/:day/:title/
 permalink_defaults:
@@ -128,3 +128,10 @@ search:
   field: post
   format: html
   limit: 10000
+
+# 加入百度和Google收录
+# 自动生成sitemap
+sitemap:
+  path: sitemap.xml
+baidusitemap:
+  path: baidusitemap.xml
